--- a/lang/ar.json
+++ b/lang/ar.json
@@ -15,12 +15,44 @@
   "Contact Us": "اتصل بنا",
   "Gallery": "المعرض",
   "News": "الاخبار",
+  "Home": "الرئيسية",
   "Products": "المنتجات",
   "Reference": "سابقة الأعمال",
   "Distributors": "الموزعون المعتمدون",
   "About": "عن شركتنا",
   "Contact": "معلومات الاتصال",
   "Company": "الشركة",
+  "SALES AND GALLERY": "المبيعات والمعرض",
+  "SERVICE CENTER AND SPARE PARTS": "مركز الخدمة والصيانة وقطع الغيار",
+  "MANAGEMENT": "الإدارة",
+  "Address": "العنوان",
+  "Customer Support": "خدمة العملاء",
+  "Email": "البريد الإلكتروني",
+  "Tel.": "التليفون",
+  "Fax": "فاكس",
+  "Mob.": "موبايل",
+  "ContactHead": "اتصل بنا لحل أي شك",
+  "Provided": "نقدم لكم",
+  "Policy": "السياسة",
+  "ProvidedText": "نقدم لكم ......",
+  "PolicyText": "سياسة الشركة ....",
+  "Name": "الاسم",
+  "City": "المدينة",
+  "Phone": "التليفون",
+  "Location": "الموقع",
+  "PreWork": "سابقة الأعمال التي قامت الشركة بانجازها",
+  "PublicCompanies": "شركات القطاع العام",
+  "PrivateCompanies": "شركات القطاع الخاص",
+  "Read more": "اقرأ المزيد",
+  "Data Sheets": "الداتا شيت",
+  "Download": "تحميل",
+  "Descriptions": "الوصف",
+  "Technical Data": "البيانات الفنية",
+  "Accessories": "الملحقات",
+  "Optional": "الخيارات",
+  "": "",
+  "": "",
+  "": "",
 
   "You are logged in!": "لقد قمت بتسجيل الدخول!",
   "Profile Information": "معلومات الملف الشخصي",
@@ -32,8 +64,6 @@
   "Are you sure you want to delete your account?": "هل أنت متأكد أنك تريد حذف حسابك؟",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "بمجرد حذف حسابك، ستُحذف جميع موارده وبياناته بشكل دائم. يرجى إدخال كلمة المرور الخاصة بك لتأكيد رغبتك في حذف حسابك بشكل دائم.",
 
-  "Name": "الاسم",
-  "Email": "البريد الإلكتروني",
   "Password": "كلمة المرور",
   "Confirm Password": "تأكيد كلمة المرور",
   "Current Password": "كلمة المرور الحالية",
