--- a/lang/en.json
+++ b/lang/en.json
@@ -15,12 +15,44 @@
   "Contact Us": "Contact Us",
   "Gallery": "Gallery",
   "News": "News",
+  "Home": "Home",
   "Products": "Products",
   "Reference": "Reference",
   "Distributors": "Distributors",
   "About": "About us",
   "Contact": "Contact us",
   "Company": "Company",
+  "SALES AND GALLERY": "SALES AND GALLERY",
+  "SERVICE CENTER AND SPARE PARTS": "SERVICE CENTER AND SPARE PARTS",
+  "MANAGEMENT": "MANAGEMENT",
+  "Address": "Address",
+  "Customer Support": "Customer Support",
+  "Email": "Email",
+  "Tel.": "Tel.",
+  "Fax": "Fax",
+  "Mob.": "Mob.",
+  "ContactHead": "Contact us to solve any doubt",
+  "Provided": "Provided",
+  "Policy": "Policy",
+  "ProvidedText": "Our Company Provided ....",
+  "PolicyText": "Company's Policy ....",
+  "Name": "Name",
+  "City": "City",
+  "Phone": "Phone",
+  "Location": "Location",
+  "PreWork": "PREVIOUS WORK BY THE COMPANY ACCOMPLISHING",
+  "PublicCompanies": "PUBLIC SECTOR COMPANIES",
+  "PrivateCompanies": "PRIVATE SECTOR COMPANIES",
+  "Read more": "Read more",
+  "Data Sheets": "Data Sheets",
+  "Download": "Download",
+  "Descriptions": "Descriptions",
+  "Technical Data": "Technical Data",
+  "Accessories": "Accessories",
+  "Optional": "Optional",
+  "": "",
+  "": "",
+  "": "",
 
   "You are logged in!": "You're logged in!",
   "Profile Information": "Profile Information",
@@ -32,8 +64,6 @@
   "Are you sure you want to delete your account?": "Are you sure you want to delete your account?",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.",
 
-  "Name": "Name",
-  "Email": "Email",
   "Password": "Password",
   "Confirm Password": "Confirm Password",
   "Current Password": "Current Password",
