--- a/lang/en.json
+++ b/lang/en.json
@@ -50,7 +50,7 @@
   "Technical Data": "Technical Data",
   "Accessories": "Accessories",
   "Optional": "Optional",
-  "": "",
+  "Product Registration": "Product Registration",
   "": "",
   "": "",
 
