--- a/lang/ar.json
+++ b/lang/ar.json
@@ -50,7 +50,14 @@
   "Technical Data": "البيانات الفنية",
   "Accessories": "الملحقات",
   "Optional": "الخيارات",
-  "": "",
+  "Product Registration": "تسجيل المنتجات",
+  "client": "اسم الشركة/العميل",
+  "serial": "رقم الفاتورة",
+  "purchaseDate": "تاريخ الشراء",
+  "optionals": "اختياري",
+  "Country": "الدولة",
+  "Submit": "ارسل",
+  "filesUpload": "تحميل صورة نهائية بعد التركيب/التشغيل",
   "": "",
   "": "",
 
