--- a/lang/en.json
+++ b/lang/en.json
@@ -51,7 +51,13 @@
   "Accessories": "Accessories",
   "Optional": "Optional",
   "Product Registration": "Product Registration",
-  "": "",
+  "client": "Client",
+  "serial": "Invoice No.",
+  "purchaseDate": "Purchase Date",
+  "optionals": "Optional",
+  "Country": "Country",
+  "Submit": "Submit",
+  "filesUpload": "Upload final image after installation/running",
   "": "",
 
   "You are logged in!": "You're logged in!",
