Update as new comments

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -58,7 +58,7 @@
   "Country": "الدولة",
   "Submit": "ارسل",
   "filesUpload": "تحميل صورة نهائية بعد التركيب/التشغيل",
-  "": "",
+  "applications": "المجالات",
   "": "",
 
   "You are logged in!": "لقد قمت بتسجيل الدخول!",
