--- a/lang/en.json
+++ b/lang/en.json
@@ -58,6 +58,7 @@
   "Country": "Country",
   "Submit": "Submit",
   "filesUpload": "Upload final image after installation/running",
+  "applications": "Applications",
   "": "",
 
   "You are logged in!": "You're logged in!",
