modification as client needs

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -52,13 +52,16 @@
   "Optional": "الخيارات",
   "Product Registration": "تسجيل المنتجات",
   "client": "اسم الشركة/العميل",
-  "serial": "رقم الفاتورة",
+  "invoice": "رقم الفاتورة",
+  "serial": "رقم السيريال",
   "purchaseDate": "تاريخ الشراء",
   "optionals": "اختياري",
   "Country": "الدولة",
   "Submit": "ارسل",
   "filesUpload": "تحميل صورة نهائية بعد التركيب/التشغيل",
   "applications": "المجالات",
+  "moreProducts": "المزيد من المتجات",
+  "": "",
   "": "",
 
   "You are logged in!": "لقد قمت بتسجيل الدخول!",
