--- a/lang/en.json
+++ b/lang/en.json
@@ -52,13 +52,16 @@
   "Optional": "Optional",
   "Product Registration": "Product Registration",
   "client": "Client",
-  "serial": "Invoice No.",
+  "invoice": "Invoice No.",
+  "serial": "Serial No.",
   "purchaseDate": "Purchase Date",
   "optionals": "Optional",
   "Country": "Country",
   "Submit": "Submit",
   "filesUpload": "Upload final image after installation/running",
   "applications": "Applications",
+  "moreProducts": "More Products",
+  "": "",
   "": "",
 
   "You are logged in!": "You're logged in!",
